--- a/public/viewer.html
+++ b/public/viewer.html
@@ -12,6 +12,7 @@
 				var socket = io.connect('http://'+window.location.host);
 
 				socket.on('connect',function(){
+					console.log('connect');
 				});
 				
 				socket.on('new_image',function(data){
